# dfa

./: .gitignore  BENIOKU.txt  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: ödev.txt
src/: __init__.py  main.py
src/dfa/: __init__.py  dfa.py  graph.py  minimize.py  state.py
tests/: test_dfa.py
