[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfa"
version = "0.1.0"
description = "Implementation of Deterministic Finite Automaton as Graph."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.20.3",
    "vermin>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.2.2",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 79
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Category ignores
    "ANN",  # flake8-annotations
    "COM",  # flake8-commas
    "C90",  # mccabe complexity
    "DJ",   # django
    "EXE",  # flake8-executable
    "T10",  # debugger
    "TID",  # flake8-tidy-imports
    
    # Documentation rules
    "D100", # missing module docstring
    "D101", # missing class docstring
    "D102", # missing function docstring
    "D103", # missing function docstring in public package
    "D104", # missing package docstring
    "D105", # missing magic method docstring
    "D106", # missing nested class docstring
    "D107", # missing __init__ docstring
    "D200", # one-line docstring should fit on one line
    "D203", # one blank line before class (conflicts with D211)
    "D205", # blank line required between summary and description
    "D211", # no-blank-line-before-class
    "D212", # multi-line docstring starts with a new line
    "D213", # multi-line-summary-second-line
    "D400", # first line should end with a period
    "D401", # first line should be in imperative mood
    "D413", # missing blank line after last section
    "D415", # first line should end with punctuation
    
    # Code style and formatting
    "COM812", # missing-trailing-comma
    "E402",   # false positives for local imports
    "E501",   # line too long (formatter handles this)
    "ISC001", # conflicts with formatter
    
    # Error handling
    "EM101",  # raw-string-in-exception
    "TRY003", # external messages in exceptions are too verbose
    
    # TODO and comments
    "ERA001", # commented-out code
    "FIX002", # line-contains-todo
    "TD002",  # missing author in TODO
    "TD003",  # missing-todo-link
    
    # Miscellaneous
    "ANN401", # any type annotation
    "CPY001", # missing copyright notice
    "FA100",  # future annotations
    "FA102",  # future annotations false positive
    "FBT003", # boolean positional argument
    "N802",   # function name should be lowercase
    "PLR0904", # too many public methods
    "PT011",  # pytest-raises-too-broad
    "S101",   # use of assert
    "S311",   # standard pseudo-random generators
    "T201",   # print statement
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T201"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
