[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfa"
version = "0.1.0"
description = "Implementation of Deterministic Finite Automaton as Graph."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["graphviz>=0.20.3", "vermin>=1.6.0"]

[dependency-groups]
dev = ["mypy>=1.9.0", "ruff>=0.2.2", "pytest>=8.3.5"]

[tool.ruff]
line-length = 79
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PIE",
    "SIM",
    "RET",
    "ARG",
    "PTH",
    "PL",
    "RUF",
    "S",
    "BLE",
    "ANN",
    "ASYNC",
    "PT",
    "D101",
    "D102",
    "D103",
]
ignore = [
    "E501",
    "ISC001",
    "COM812",
    "D203",
    "D213",
    "ANN101",
    "ANN102",
    "ANN401", # use Any in **kwargs
    "PLR2004",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
